--- a/you won.css
+++ b/you won.css
@@ -28,17 +28,28 @@ body{
     box-shadow: 0 15px 25px rgba(0,0,0,0.15);
 }
 .btn-4 {
-    border: 1px solid;
-    overflow: hidden;
-    position: relative;
-}
-
-
-  .button:hover {opacity: 1}
+    align-self: flex-end;  
+    background-color: #6849da;
+    border: none;
+    color: white;
+    padding: 16px 32px;
+    text-align: center;
+    font-size: 16px;
+    font-family: 'Varela', sans-serif;
+    margin: 4px 2px;
+    opacity: 0.6;
+    transition: 0.3s;
+    display: inline-block;
+    text-decoration: none;
+    cursor: pointer;
+    border-radius: 16px;
+    box-shadow: 0 10px 15px rgba(0,0,0,0.15);
+  }
+  
+.btn-4:hover {opacity: 1}
   .centerthis{
       position: absolute;
       top: 60%;
       left: 50%;
       transform: translate(-50%, -50%);
   }
-
